website code changes so GUI works properly

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <!-- Questions -->
     <div class="main">
         <div class="question_box">
-            <h2>Question 1:</h2>
-            <p class="question">How many blue stripes are there on the U.S. flag?</p>
+            <h2 class="question">Question 1: How many blue stripes are there on the U.S. flag?</h2>
             <ul class="answers">
                 <li class="correct_answer">6</li>
                 <li>7</li>
@@ -25,8 +24,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 2:</h2>
-            <p class="question">Which one of these characters is not friends with Harry Potter?</p>
+            <h2 class="question">Question 2: Which one of these characters is not friends with Harry Potter?</h2>
             <ul class="answers">
                 <li>Ron Weasley</li>
                 <li>Neville Longbottom</li>
@@ -35,8 +33,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 3:</h2>
-            <p class="question">What is the color of Donald Duck’s bowtie?</p>
+            <h2 class="question">Question 3: What is the color of Donald Duck’s bowtie?</h2>
             <ul class="answers">
                 <li class="correct_answer">Red</li>
                 <li>Yellow</li>
@@ -45,8 +42,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 4:</h2>
-            <p class="question">What was the name of the band Lionel Richie was a part of?</p>
+            <h2 class="question">Question 4: What was the name of the band Lionel Richie was a part of?</h2>
             <ul class="answers">
                 <li>King Harvest</li>
                 <li>Spectrums</li>
@@ -55,8 +51,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 5:</h2>
-            <p class="question">Which animal does not appear in the Chinese zodiac?</p>
+            <h2 class="question">Question 5: Which animal does not appear in the Chinese zodiac?</h2>
             <ul class="answers">
                 <li>Dragon</li>
                 <li>Rabbit</li>
@@ -65,8 +60,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 6:</h2>
-            <p class="question">Which country held the 2016 Summer Olympics?</p>
+            <h2 class="question">Question 6: Which country held the 2016 Summer Olympics?</h2>
             <ul class="answers">
                 <li>China</li>
                 <li>Ireland</li>
@@ -75,8 +69,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 7:</h2>
-            <p class="question">Which planet is the hottest?</p>
+            <h2 class="question">Question 7: Which planet is the hottest?</h2>
             <ul class="answers">
                 <li class="correct_answer">Venus</li>
                 <li>Saturn</li>
@@ -85,8 +78,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 8:</h2>
-            <p class="question">Who was the only U.S. President to resign?</p>
+            <h2 class="question">Question 8: Who was the only U.S. President to resign?</h2>
             <ul class="answers">
                 <li>Herbert Hoover</li>
                 <li class="correct_answer">Richard Nixon</li>
@@ -95,8 +87,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 9:</h2>
-            <p class="question">What does the “D” in “D-Day” stand for?</p>
+            <h2 class="question">Question 9: What does the “D” in “D-Day” stand for?</h2>
             <ul class="answers">
                 <li>Dooms</li>
                 <li>Dark</li>
@@ -105,8 +96,7 @@
             </ul>
         </div>
         <div class="question_box">
-            <h2>Question 10:</h2>
-            <p class="question">In which city can you find the Liberty Bell?</p>
+            <h2 class="question">Question 10: In which city can you find the Liberty Bell?</h2>
             <ul class="answers">
                 <li>Washington, D.C.</li>
                 <li>Boston</li>
