--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Questions -->
     <div class="main">
         <div class="question_box">
-            <h2 class="question">Question 1: How many blue stripes are there on the U.S. flag?</h2>
+            <h2 class="question">Question 1: How many white stripes are there on the U.S. flag?</h2>
             <ul class="answers">
                 <li class="correct_answer">6</li>
                 <li>7</li>
